# web-gears-test

./: Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  test.sh
app/: mixins.py  models.py  serializers.py  views.py
app/migrations/: 0001_initial.py
backend/: settings.py  test_settings.py  urls.py
tests/: conftest.py  test_auth.py  test_task.py  test_task_comment.py
